--- a/public/assets/css/perfil.css
+++ b/public/assets/css/perfil.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body {
+    font-family: 'Poppins', sans-serif;
+}
 h1 {
     color: #4D3E3E;
     font-weight: bold;
