--- a/public/assets/css/cadastroperfil.css
+++ b/public/assets/css/cadastroperfil.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
+
 nav {
     color: #604b32;
     background: rgb(247, 246, 240);
