--- a/public/assets/css/biblioteca.css
+++ b/public/assets/css/biblioteca.css
@@ -14,8 +14,8 @@ h5 {
     font-weight: bold;
 }
 .biblioteca img {
-    width: 100px;
-    height: 100%;
+    width: 100%;
+    height: 200px;
     padding: 5px;
     border-radius: 5%;
 }
